<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="write">Написать</string>
    <string name="description">Описание</string>
    <string name="characteristic">Характеристики</string>
    <string name="ad_info">Объявление №%1$d\nДата %2$s\n%3$d просмотров</string>
    <string name="ad_characteristic_info">Вид товара: %1$s\nСостояние товара: %2$s</string>
    <string name="report">Пожаловаться на объявление</string>
    <string name="delete_all">Удалить все</string>
    <string name="delete_inactive">Удалить неактивные</string>
    <string name="more">Подробнее</string>
    <string name="call">Позвонить</string>
</resources>